# frame_selector

./: .gitignore  README.md  main.py  pyproject.toml
docs/: frame_selector.md  pipeline.md
scripts/: extract_all_frames.py
src/: frame_selector.py  yolo_prediction.py
